# lale

./: .clinerules  .gitignore  CNAME  Cargo.toml  README.md  index.html
design/: inkwell-migration-plan.md  (+5 more)
lale/: Cargo.toml
lale/src/: lib.rs  main.rs
lale/src/aeg/: builder.rs  compression.rs  mod.rs  types.rs
lale/src/analysis/: cache.rs  inkwell_timing.rs  ipet.rs  ipet_aeg.rs  loops.rs  mod.rs  timing.rs  timing_calculator.rs
lale/src/analyzers/: actor_analyzer.rs  directory.rs  function.rs  mod.rs  module.rs
lale/src/async_analysis/: actor.rs  config.rs  detector.rs  inkwell_detector.rs  inkwell_segment.rs  inkwell_wcet.rs  mod.rs  segment.rs  wcet.rs
lale/src/config/: loader.rs  mod.rs  types.rs
lale/src/ir/: callgraph.rs  cfg.rs  inkwell_cfg.rs  inkwell_parser.rs  mod.rs  parser.rs
lale/src/microarch/: branch.rs  forwarding.rs  hazards.rs  memory.rs  mod.rs  ooo.rs  pipeline.rs  simulator.rs  state.rs
lale/src/microarch/cache/: lru.rs  may.rs  mod.rs  must.rs  persistence.rs  state.rs  types.rs
lale/src/multicore/: mod.rs  schedulability.rs
lale/src/output/: json.rs  visualization.rs
lale/src/platform/: cortex_ar.rs  cortex_m.rs  mod.rs  models.rs  riscv.rs
lale/src/scheduling/: edf.rs  rma.rs  static_gen.rs  tasks.rs
lale/src/wcet/: annotations.rs  mod.rs
lale/tests/: async_detection_test.rs  integration_test.rs  llvm_crash_test.rs
laleprism/: Cargo.toml  README.md  dev.sh  run.sh  tauri.conf.json
laleprism/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
laleprism/frontend/src/: App.tsx  index.css
laleprism/frontend/src/components/ai/: AiPageBreadcrumb.tsx  AiSidebarHistory.tsx  CodeGeneratorContent.tsx  Codeblock.tsx  ImageGeneratorContent.tsx  TextGeneratorContent.tsx  VideoGeneratorContent.tsx
laleprism/frontend/src/components/analytics/: AcquisitionChannelChart.tsx  ActiveUsersChart.tsx  AnalyticsBarChart.tsx  AnalyticsMetrics.tsx  RecentOrderAnalytics.tsx  SessionChart.tsx  TopChannel.tsx  TopPages.tsx
laleprism/frontend/src/components/api-keys/: AddApiKeyModal.tsx  ApiKeyTable.tsx
laleprism/frontend/src/components/auth/: OtpForm.tsx  ResetPasswordForm.tsx
laleprism/frontend/src/components/chats/: ChatBox.tsx  ChatBoxHeader.tsx  ChatBoxSendForm.tsx  ChatHeader.tsx  ChatHeaderTitle.tsx  ChatList.tsx  ChatSidebar.tsx
laleprism/frontend/src/components/common/: CountdownTimer.tsx  TableDropdown.tsx
laleprism/frontend/src/components/crm/: CrmRecentOrderTable.tsx  CrmStatisticsChart.tsx  EstimatedRevenue.tsx  SalePieChart.tsx  UpcomingSchedule.tsx
laleprism/frontend/src/components/ecommerce/: AddProductForm.tsx  CountryMap.tsx  DemographicCard.tsx  ProductListTable.tsx  TransactionList.tsx
laleprism/frontend/src/components/faqs/: FaqOne.tsx  FaqTwo.tsx
laleprism/frontend/src/components/file-manager/: AllFolders.tsx  AllMediaCard.tsx  FileCard.tsx  FolderCard.tsx  RecentFileTable.tsx  StorageDetailsChart.tsx
laleprism/frontend/src/context/: SidebarContext.tsx  ThemeContext.tsx
laleprism/frontend/src/icons/: index.ts
laleprism/frontend/src/layout/: AlternativeLayout.tsx  AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  Backdrop.tsx  SidebarWidget.tsx
laleprism/frontend/src/pages/: ActorProjectAnalysis.tsx  Blank.tsx  Calendar.tsx  Configuration.tsx  Faqs.tsx  FileManager.tsx  Invoices.tsx  MulticoreAnalysis.tsx  PricingTables.tsx  ScheduleAnalysis.tsx  ScheduleHistory.tsx  ScheduleView.tsx  ScheduleViewer.tsx  UserProfiles.tsx
laleprism/frontend/src/services/: tauri.ts
laleprism/src/: analysis.rs  commands.rs  demangler.rs  main.rs  storage.rs
wcet-benches/: .gitignore  Cargo.toml  README.md
wcet-benches/scripts/: compile_benchmarks.sh  setup.sh
wcet-benches/src/: compiler.rs  flow_facts.rs  lib.rs  main.rs  runner.rs  suite.rs
(+292 files in other folders)
