[package]
name = "lale"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lale"
path = "src/main.rs"

[dependencies]
llvm-ir = { version = "0.11", features = ["llvm-17"] }
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
good_lp = { version = "1.14", features = ["coin_cbc"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
