[workspace]
resolver = "3"
members = [
    "lale",
    "laleprism",
    "wcet-benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Theo Bulut <vertexclique@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vertexclique/lale"

[workspace.dependencies]
# Shared dependencies across workspace members
llvm-ir = { version = "0.11", features = ["llvm-17"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
good_lp = { version = "1.14", features = ["coin_cbc"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
