[package]
name = "laleprism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Workspace dependencies
lale = { path = "../lale" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ahash.workspace = true

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

# Demangling
rustc-demangle = "0.1"
cpp_demangle = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono.workspace = true
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
