[package]
name = "wcet-benches"
version = "0.1.0"
edition = "2021"
authors = ["Theo Bulut <vertexclique@gmail.com>"]

[dependencies]
lale = { path = "../lale" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bench-runner"
path = "src/main.rs"

[[bench]]
name = "wcet_benchmarks"
harness = false
