[package]
name = "wcet-benches"
version = "0.1.0"
edition = "2021"
authors = ["Theo Bulut <vertexclique@gmail.com>"]

[dependencies]
lale = { path = "../lale" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
chrono = "0.4"
which = "6.0"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bin]]
name = "bench-runner"
path = "src/main.rs"
